@@ -74,6 +74,9 @@
 	* gtk/Graphics/UI/Gtk/TreeList/CellView.chs.pp: fix bug caused by
 	overlapping patterns.
 
+	* Makefile.am: rename several modules to .pp (I swear I committed this
+	before!)
+
 2005-04-6 Duncan Coutts <duncan@coutts.uklinux.net>
 
 	* tools/callbackGen/gtkmarshal.list: tidy up slightly, and add
